Consistent Polymer Icon overriding

--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -151,6 +151,7 @@ leo_icons = [
   "autoplay-off.svg",
   "autoplay-on.svg",
   "backward.svg",
+  "bluetooth-off.svg",
   "bluetooth.svg",
   "brave-icon-release-color.svg",
   "browser-extensions.svg",
@@ -165,28 +166,39 @@ leo_icons = [
   "close.svg",
   "cloud-download.svg",
   "cloud-off.svg",
+  "code-off.svg",
   "code.svg",
   "coins-alt1.svg",
   "coins.svg",
+  "cookie-off.svg",
+  "cookie.svg",
+  "copy-off.svg",
   "copy.svg",
+  "cpu-chip-off.svg",
   "cpu-chip.svg",
+  "credit-card-off.svg",
   "credit-card.svg",
   "crypto-wallets.svg",
   "currency-exchange.svg",
   "discover.svg",
+  "download-off.svg",
   "download.svg",
   "edit-box.svg",
   "edit-pencil.svg",
   "end-outline.svg",
+  "ethereum-off.svg",
   "ethereum-on.svg",
   "expand.svg",
   "eye-off.svg",
   "eye-on.svg",
+  "file-corrupted.svg",
   "file-edit.svg",
+  "file.svg",
   "filter-settings.svg",
   "flash.svg",
   "flashdrive.svg",
   "folder-exchange.svg",
+  "font-size-off.svg",
   "font-size.svg",
   "forward-15.svg",
   "fullscreen-on.svg",
@@ -194,23 +206,30 @@ leo_icons = [
   "grid04.svg",
   "help-outline.svg",
   "history.svg",
+  "image-off.svg",
   "image.svg",
   "info-filled.svg",
   "info-outline.svg",
+  "key-lock-off.svg",
   "key-lock.svg",
   "key.svg",
+  "launch-off.svg",
   "launch.svg",
   "link-normal.svg",
   "list-bullet-default.svg",
   "list-checks.svg",
   "list-settings.svg",
+  "location-off.svg",
   "location-on.svg",
   "lock.svg",
+  "media-visualizer-off.svg",
   "media-visualizer.svg",
+  "microphone-off.svg",
   "microphone.svg",
   "money-bag-coins.svg",
   "more-horizontal.svg",
   "more-vertical.svg",
+  "motion-sensor-off.svg",
   "motion-sensor.svg",
   "network-speed-average.svg",
   "news-business.svg",
@@ -236,6 +255,7 @@ leo_icons = [
   "news-weather.svg",
   "news-worldnews.svg",
   "nft.svg",
+  "notification-off.svg",
   "notification.svg",
   "pause-filled.svg",
   "picture-in-picture.svg",
@@ -249,6 +269,8 @@ leo_icons = [
   "product-playlist.svg",
   "product-sync.svg",
   "product-translate.svg",
+  "protocol-handler-off.svg",
+  "protocol-handler.svg",
   "qr-code.svg",
   "radio-checked.svg",
   "radio-unchecked.svg",
@@ -257,6 +279,7 @@ leo_icons = [
   "rocket.svg",
   "safe.svg",
   "search-fuel-tank.svg",
+  "search-zoom-in.svg",
   "search.svg",
   "send.svg",
   "settings.svg",
@@ -265,9 +288,11 @@ leo_icons = [
   "shield-star.svg",
   "shuffle-on.svg",
   "sidepanel-open.svg",
+  "smartphone-desktop-off.svg",
   "smartphone-desktop.svg",
   "smartphone-hand.svg",
   "social-dribbble.svg",
+  "solana-off.svg",
   "solana-on.svg",
   "sort-asc.svg",
   "sort-desc.svg",
@@ -279,21 +304,28 @@ leo_icons = [
   "thumb-down.svg",
   "trash.svg",
   "tune.svg",
+  "usb-off.svg",
   "usb.svg",
   "usd-circle.svg",
   "user-accounts.svg",
   "user-circle.svg",
+  "user-off.svg",
   "user.svg",
   "verification-filled-color.svg",
   "verification-filled.svg",
+  "video-camera-off.svg",
   "video-camera.svg",
+  "virtual-reality-off.svg",
   "virtual-reality.svg",
+  "volume-off.svg",
   "volume-on.svg",
   "warning-circle-filled.svg",
   "warning-triangle-filled.svg",
   "warning-triangle-outline.svg",
   "web3.svg",
+  "window-tab-close.svg",
   "window-tab-new.svg",
+  "window.svg",
   "windows-open.svg",
 ]
 
