Custom filter list settings android

--- a/android/brave_java_resources.gni
+++ b/android/brave_java_resources.gni
@@ -851,6 +851,7 @@ brave_java_resources = [
   "java/res/layout/edit_visible_assets_bottom_sheet.xml",
   "java/res/layout/fragment_accounts.xml",
   "java/res/layout/fragment_ad_free_callout_dialog.xml",
+  "java/res/layout/fragment_add_custom_filter_lists.xml",
   "java/res/layout/fragment_add_switch_ethereum_chain.xml",
   "java/res/layout/fragment_add_token.xml",
   "java/res/layout/fragment_backup_wallet.xml",
@@ -862,6 +863,7 @@ brave_java_resources = [
   "java/res/layout/fragment_brave_vpn_confirm_dialog.xml",
   "java/res/layout/fragment_brave_vpn_plan.xml",
   "java/res/layout/fragment_connect_account.xml",
+  "java/res/layout/fragment_content_filtering.xml",
   "java/res/layout/fragment_create_account.xml",
   "java/res/layout/fragment_create_account.xml",
   "java/res/layout/fragment_cross_promotional_modal_dialog.xml",
@@ -896,6 +898,8 @@ brave_java_resources = [
   "java/res/layout/highlight_layout.xml",
   "java/res/layout/icon_row_menu_footer.xml",
   "java/res/layout/item_create_account.xml",
+  "java/res/layout/item_custom_filter.xml",
+  "java/res/layout/item_filter_title.xml",
   "java/res/layout/item_fragment_two_line_divider_item.xml",
   "java/res/layout/item_fragment_two_line_item.xml",
   "java/res/layout/item_network_selector.xml",
@@ -956,6 +960,7 @@ brave_java_resources = [
   "java/res/menu/menu_account_selector.xml",
   "java/res/menu/menu_brave_news_settings_search.xml",
   "java/res/menu/menu_brave_vpn.xml",
+  "java/res/menu/menu_custom_filter_list.xml",
   "java/res/menu/menu_dapps_panel.xml",
   "java/res/menu/menu_network_selector.xml",
   "java/res/menu/new_tab_menu.xml",
