--- a/android/brave_java_resources.gni
+++ b/android/brave_java_resources.gni
@@ -415,6 +415,7 @@ brave_java_resources = [
   "java/res/drawable/brave_sync_toggle_on_btn_right.xml",
   "java/res/drawable/brave_sync_top_rounded.xml",
   "java/res/drawable/brave_sync_warning.xml",
+  "java/res/drawable/carat_right.xml",
   "java/res/drawable/card_bg.xml",
   "java/res/drawable/checked_circle_filled.xml",
   "java/res/drawable/circle_shimmer.xml",
