Update omnibox search conversion promotion UI
fix brave/brave-browser#31746

We'll use four types of banner and select one type via griffin.
When user choose "maybe later" button, promotion entry is not shown
till 3d passed and then show it again.

--- a/components/vector_icons/BUILD.gn
+++ b/components/vector_icons/BUILD.gn
@@ -16,6 +16,7 @@ aggregate_vector_icons("brave_components_vector_icons") {
   # The Skia icon names are transformed to make them easier to use in Brave Core
   # `arrow-right.svg` becomes `leo_arrow_right.icon`
   leo_icons = [
+    "leo_close.icon",
     "leo_plus_add.icon",
     "leo_search.icon",
     "leo_tune_small.icon",
