--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -738,6 +738,7 @@ source_set("ui") {
       "//brave/browser/brave_wallet",
       "//brave/browser/resources/settings:resources",
       "//brave/browser/ui/bookmark",
+      "//brave/browser/ui/color:leo_colors",
       "//brave/common/importer",
       "//brave/components/brave_adaptive_captcha",
       "//brave/components/brave_new_tab_ui:generated_resources",
