Buy web UI (#19334)
* implement buy screen

* fix style

* Open buy link on android and clean up

* add test

* - Update id (being used by deposit PR) and comment

* fix button width (width is still more than spec)

* update file name to match desktop style

* clean up

* fix security warning with 'noopener'

* clean up and add docs per deposit PR review

* remove router

* update log

* Separate android buy directory to generate resources

* Reduce redundant test code and formatting

--- a/components/brave_wallet_ui/BUILD.gn
+++ b/components/brave_wallet_ui/BUILD.gn
@@ -11,6 +11,7 @@ import("//tools/grit/repack.gni")
 repack("resources") {
   if (is_android) {
     deps = [
+      "//brave/components/brave_wallet_ui/page/screens/android-buy/android:brave_wallet_fund_wallet_page_generated",
       "//brave/components/brave_wallet_ui/page/screens/fund-wallet/android:brave_wallet_deposit_page_generated",
       "//brave/components/brave_wallet_ui/page/screens/send/android:brave_wallet_send_page_generated",
       "//brave/components/brave_wallet_ui/page/screens/swap/android:brave_wallet_swap_page_generated",
@@ -18,6 +19,7 @@ repack("resources") {
 
     sources = [
       "$root_gen_dir/brave/components/brave_wallet_page/resources/brave_wallet_deposit_page_generated.pak",
+      "$root_gen_dir/brave/components/brave_wallet_page/resources/brave_wallet_fund_wallet_page_generated.pak",
       "$root_gen_dir/brave/components/brave_wallet_page/resources/brave_wallet_send_page_generated.pak",
       "$root_gen_dir/brave/components/brave_wallet_page/resources/brave_wallet_swap_page_generated.pak",
     ]
