Disable CalculateNativeWinOcclusion feature

--- a/tools/perf/configs/dashboard/brave-win11-hp-laptop.json5
+++ b/tools/perf/configs/dashboard/brave-win11-hp-laptop.json5
@@ -4,7 +4,7 @@
     "browser-type": "brave",
     "profile": "brave-typical-win-v1.55.98",
     "extra-browser-args": [],
-    "extra-benchmark-args": [],
+    "extra-browser-args": ["--disable-features=CalculateNativeWinOcclusion"],
     "save-artifacts": true,
   }],
   "benchmarks": [
