--- a/tools/perf/configs/dashboard/chrome-win11-hp-laptop.json5
+++ b/tools/perf/configs/dashboard/chrome-win11-hp-laptop.json5
@@ -4,7 +4,7 @@
     "browser-type": "chrome.no-trials",
     "profile": "chrome-typical-win-114",
     "extra-browser-args": [],
-    "extra-benchmark-args": [],
+    "extra-browser-args": ["--disable-features=CalculateNativeWinOcclusion"],
     "save-artifacts": true,
   }],
   "benchmarks": [
