--- a/tools/perf/configs/dashboard/smoke-chrome.json5
+++ b/tools/perf/configs/dashboard/smoke-chrome.json5
@@ -3,7 +3,7 @@
     "dashboard-bot-name": "test-agent",
     "browser-type": "chrome",
     "profile": "chrome-typical-win-114",
-    "extra-browser-args": [],
+    "extra-browser-args": ["--disable-features=CalculateNativeWinOcclusion"],
     "extra-benchmark-args": [],
     "save-artifacts": true,
   }],
