--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -233,15 +233,13 @@ leo_icons = [
   "pause-filled.svg",
   "picture-in-picture.svg",
   "play-filled.svg",
-  "playlist-open-side.svg",
   "plus-add.svg",
   "product-bat-outline.svg",
+  "brave-icon-release-color.svg",
   "product-brave-ai.svg",
-  "product-brave-color.svg",
-  "product-brave-monochrome.svg",
   "product-brave-wallet.svg",
   "product-ipfs-outline.svg",
-  "product-playlist-bold-add.svg",
+  "product-playlist-bold-add-color.svg",
   "product-playlist.svg",
   "product-sync.svg",
   "product-translate.svg",
@@ -259,6 +257,7 @@ leo_icons = [
   "shield-done.svg",
   "shield-star.svg",
   "shuffle-on.svg",
+  "sidepanel-open.svg",
   "smartphone-desktop.svg",
   "smartphone-hand.svg",
   "solana-on.svg",
