--- a/tools/perf/configs/dashboard/chrome-win11-hp-laptop.json5
+++ b/tools/perf/configs/dashboard/chrome-win11-hp-laptop.json5
@@ -3,8 +3,8 @@
     "dashboard-bot-name": "win11-hp-laptop-typical",
     "browser-type": "chrome.no-trials",
     "profile": "chrome-typical-win-114",
-    "extra-browser-args": [],
     "extra-browser-args": ["--disable-features=CalculateNativeWinOcclusion"],
+    "extra-benchmark-args": [],
     "save-artifacts": true,
   }],
   "benchmarks": [
