Update Widevine signature_generator to Python 3 (#18636)
* Update Widevine signature_generator to Python 3

* Fix missing dependency 'macholib' on macOS

* Add missing license for macholib

* Fix Widevine signature generation on macOS

* Add third_party/macholib/ to .gitignore

* Fix lint errors

* Simplify code

* Add comment

* Lint

* Simplify code

* Only include DEP macholib on macOS

* Fix build error

* Remove obsolete import

* Reference more stable dep license file

* Remove wrong line of code

* Remove unnecessary comment

* Remove obsolete workaround

* Revert "Remove obsolete workaround"

This reverts commit 0c1b736ed7bc02449e6dd2d49b5985c829df85b6.

* Update comment

* Fix Android build

* Fix Android build

* Fix broken init on Windows

* Remove obsolete workaround

--- a/browser/widevine/BUILD.gn
+++ b/browser/widevine/BUILD.gn
@@ -90,43 +90,16 @@ source_set("browser_tests") {
 }
 
 if (is_win && !skip_signing) {
-  template("sig_file") {
-    assert(defined(invoker.flags), "Need flags in $target_name.")
-    action(target_name) {
-      forward_variables_from(invoker,
-                             [
-                               "sources",
-                               "outputs",
-                               "deps",
-                             ])
-
-      # It would be nice to just invoke the original signature_generator.py
-      # script here. But it uses Python 2 and expects the `cryptography`
-      # library to be installed. So we invoke this Python 3 helper here.
-      script = "signature_generator_python3.py"
-      inputs = [
-        "//brave/script/lib/widevine.py",
-        "//brave/script/lib/util.py",
-        "//brave/script/lib/config.py",
-        "//brave/script/lib/env_util.py",
-      ]
-      args = [
-        rebase_path(sources[0], root_build_dir),
-        rebase_path(outputs[0], root_build_dir),
-        invoker.flags,
-      ]
-    }
-  }
-  sig_file("brave_exe_sig") {
+  widevine_sign_file("brave_exe_sig") {
+    file = "$root_out_dir/presigned_binaries/brave.exe"
+    signature_file = "$root_out_dir/brave.exe.sig"
     flags = "1"
-    sources = [ "$root_out_dir/presigned_binaries/brave.exe" ]
-    outputs = [ "$root_out_dir/brave.exe.sig" ]
     deps = [ "//brave:signed_brave_exe" ]
   }
-  sig_file("chrome_dll_sig") {
+  widevine_sign_file("chrome_dll_sig") {
+    file = "$root_out_dir/presigned_binaries/chrome.dll"
+    signature_file = "$root_out_dir/chrome.dll.sig"
     flags = "0"
-    sources = [ "$root_out_dir/presigned_binaries/chrome.dll" ]
-    outputs = [ "$root_out_dir/chrome.dll.sig" ]
     deps = [ "//brave:signed_chrome_dll" ]
   }
 }
