--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -84,10 +84,19 @@ script/generate_licenses.py @fmarier
 
 # Crypto Wallets
 browser/brave_wallet/ @brave/crypto-wallets-core
+browser/ui/brave_wallet/ @brave/crypto-wallets-core
+browser/ui/wallet_bubble_manager_delegate_impl.* @brave/crypto-wallets-core
+browser/ui/webui/brave_wallet/ @brave/crypto-wallets-core
+browser/ui/views/wallet_bubble_focus_observer* @brave/crypto-wallets-core
 components/brave_wallet/ @brave/crypto-wallets-core
-components/brave_wallet/browser/brave_wallet_provider_delegate.h @brave/crypto-wallets-core @brave/ios
-components/brave_wallet/resources/*.js @brave/crypto-wallets-core @brave/ios
+components/brave_wallet/browser/brave_wallet_provider_delegate.h @brave/crypto-wallets-core @brave/crypto-wallets-ios
+components/brave_wallet/common/brave_wallet.mojom @brave/crypto-wallets-ios
+components/brave_wallet/renderer/ @brave/crypto-wallets-ios
+components/brave_wallet/resources/*.js @brave/crypto-wallets-core @brave/crypto-wallets-ios
 components/brave_wallet_ui/ @brave/crypto-wallets-front-end
+ios/browser/brave_wallet/ @brave/crypto-wallets-ios
+ios/browser/api/brave_wallet @brave/crypto-wallets-ios
+renderer/brave_wallet/ @brave/crypto-wallets-core @brave/crypto-wallets-ios
 
 # Brave Referrals Service
 components/brave_referrals/browser/brave_referrals_service* @simonhong
