Add new command gen_gradle

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "build_fuzzer": "node ./build/commands/scripts/commands.js build_fuzzer",
     "fuzzer": "node ./build/commands/scripts/commands.js run_fuzzer",
     "perf_tests": "node ./build/commands/scripts/commands.js run_perf_tests",
-    "gen_env": "node ./build/commands/scripts/genEnv.js"
+    "gen_env": "node ./build/commands/scripts/genEnv.js",
+    "gen_gradle": "node ./build/commands/scripts/commands.js gen_gradle"
   },
   "repository": {
     "type": "git",
