--- a/components/filecoin/rs/Cargo.toml
+++ b/components/filecoin/rs/Cargo.toml
@@ -18,7 +18,7 @@ thiserror = "^1.0.30"
 blake2b_simd = "1"
 cid = { version = "0.8.5", default-features = false }
 multihash = { version="0.16.3", default-features = false, features = [ "multihash-impl", "blake2b"] }
-fvm_ipld_encoding = "^0.3"
+fvm_ipld_encoding = "0.3"
 
 [lib]
 name = "filecoin_cxx"
