--- a/components/brave_news/browser/BUILD.gn
+++ b/components/brave_news/browser/BUILD.gn
@@ -18,10 +18,14 @@ static_library("browser") {
     "combined_feed_parsing.h",
     "direct_feed_controller.cc",
     "direct_feed_controller.h",
+    "direct_feed_fetcher.cc",
+    "direct_feed_fetcher.h",
     "feed_building.cc",
     "feed_building.h",
     "feed_controller.cc",
     "feed_controller.h",
+    "feed_fetcher.cc",
+    "feed_fetcher.h",
     "html_parsing.cc",
     "html_parsing.h",
     "locales_helper.cc",
