copy clean link

--- a/android/brave_java_sources.gni
+++ b/android/brave_java_sources.gni
@@ -90,6 +90,7 @@ brave_java_sources = [
   "../../brave/android/java/org/chromium/chrome/browser/brave_stats/BraveStatsBottomSheetDialogFragment.java",
   "../../brave/android/java/org/chromium/chrome/browser/brave_stats/BraveStatsUtil.java",
   "../../brave/android/java/org/chromium/chrome/browser/component_updater/BraveComponentUpdater.java",
+  "../../brave/android/java/org/chromium/chrome/browser/contextmenu/BraveChromeContextMenuPopulator.java",
   "../../brave/android/java/org/chromium/chrome/browser/crash/BravePureJavaExceptionReporter.java",
   "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/AssetRatioServiceFactory.java",
   "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/BlockchainRegistryFactory.java",
@@ -384,6 +385,7 @@ brave_java_sources = [
   "../../brave/android/java/org/chromium/chrome/browser/shields/BraveShieldsUtils.java",
   "../../brave/android/java/org/chromium/chrome/browser/shields/CookieListOptInServiceFactory.java",
   "../../brave/android/java/org/chromium/chrome/browser/shields/FilterListServiceFactory.java",
+  "../../brave/android/java/org/chromium/chrome/browser/shields/UrlSanitizerServiceFactory.java",
   "../../brave/android/java/org/chromium/chrome/browser/signin/BraveSigninManager.java",
   "../../brave/android/java/org/chromium/chrome/browser/site_settings/BraveSiteSettingsDelegate.java",
   "../../brave/android/java/org/chromium/chrome/browser/site_settings/BraveWalletEthereumConnectedSites.java",
