--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -1220,6 +1220,7 @@ if (is_android) {
       "//chrome/browser/android/lifecycle:java",
       "//chrome/browser/back_press/android:java",
       "//chrome/browser/browser_controls/android:java",
+      "//chrome/browser/contextmenu:java",
       "//chrome/browser/feed/android:java",
       "//chrome/browser/flags:java",
       "//chrome/browser/fullscreen/android:java",
@@ -1251,7 +1252,9 @@ if (is_android) {
       "//components/browser_ui/widget/android:java",
       "//components/commerce/core/android:core_java",
       "//components/embedder_support/android:browser_context_java",
+      "//components/embedder_support/android:context_menu_java",
       "//components/external_intents/android:java",
+      "//components/externalauth/android:java",
       "//components/favicon/android:java",
       "//components/image_fetcher:java",
       "//components/omnibox/browser:browser_java",
