--- a/app/command_utils.cc.template
+++ b/app/command_utils.cc.template
@@ -11,7 +11,7 @@
 #include "base/containers/span.h"
 #include "base/feature_list.h"
 #include "brave/app/brave_command_ids.h"
-#include "brave/components/commander/common/features.h"
+#include "brave/components/commander/common/buildflags/buildflags.h"
 #include "brave/components/commands/common/features.h"
 #include "chrome/app/chrome_command_ids.h"
 #include "chrome/grit/chromium_strings.h"
@@ -20,6 +20,10 @@
 #include "components/strings/grit/components_strings.h"
 #include "ui/base/l10n/l10n_util.h"
 #include "ui/strings/grit/ui_strings.h"
+
+#if BUILDFLAG(ENABLE_COMMANDER)
+#include "brave/components/commander/common/features.h"
+#endif
 
 namespace commands {
 namespace {
@@ -36,15 +40,23 @@ COMMAND_IDS
 }  // namespace
 
 base::span<const int> GetCommands() {
+  #if BUILDFLAG(ENABLE_COMMANDER)
   DCHECK(base::FeatureList::IsEnabled(features::kBraveCommands) ||
          commander::CommanderEnabled())
+  #else
+  DCHECK(base::FeatureList::IsEnabled(features::kBraveCommands))
+  #endif
       << "This should only be used when |kBraveCommands| is enabled.";
   return kCommandIds;
 }
 
 std::string GetCommandName(int command_id) {
+  #if BUILDFLAG(ENABLE_COMMANDER)
   DCHECK(base::FeatureList::IsEnabled(features::kBraveCommands) ||
          commander::CommanderEnabled())
+  #else
+  DCHECK(base::FeatureList::IsEnabled(features::kBraveCommands))
+  #endif
       << "This should only be used when |kBraveCommands| is enabled.";
   auto it = kCommandTranslationIds.find(command_id);
   CHECK(it != kCommandTranslationIds.end())
