Update leo icons

--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -152,6 +152,7 @@ leo_icons = [
   "autoplay-on.svg",
   "backward.svg",
   "bluetooth.svg",
+  "brave-icon-release-color.svg",
   "browser-extensions.svg",
   "carat-down.svg",
   "check-circle-filled.svg",
@@ -160,6 +161,8 @@ leo_icons = [
   "checkbox-checked.svg",
   "checkbox-unchecked.svg",
   "close.svg",
+  "cloud-download.svg",
+  "cloud-off.svg",
   "code.svg",
   "coins-alt1.svg",
   "coins.svg",
@@ -181,6 +184,7 @@ leo_icons = [
   "filter-settings.svg",
   "flash.svg",
   "flashdrive.svg",
+  "folder-exchange.svg",
   "font-size.svg",
   "forward-15.svg",
   "fullscreen-on.svg",
@@ -195,6 +199,7 @@ leo_icons = [
   "key.svg",
   "launch.svg",
   "link-normal.svg",
+  "list-bullet-default.svg",
   "list-checks.svg",
   "list-settings.svg",
   "location-on.svg",
@@ -235,7 +240,6 @@ leo_icons = [
   "play-filled.svg",
   "plus-add.svg",
   "product-bat-outline.svg",
-  "brave-icon-release-color.svg",
   "product-brave-ai.svg",
   "product-brave-wallet.svg",
   "product-ipfs-outline.svg",
@@ -254,6 +258,7 @@ leo_icons = [
   "search.svg",
   "send.svg",
   "settings.svg",
+  "share-macos.svg",
   "shield-done.svg",
   "shield-star.svg",
   "shuffle-on.svg",
@@ -261,8 +266,8 @@ leo_icons = [
   "smartphone-desktop.svg",
   "smartphone-hand.svg",
   "solana-on.svg",
-  "sort-desc.svg",
   "sort-asc.svg",
+  "sort-desc.svg",
   "sparkles.svg",
   "stack.svg",
   "start-outline.svg",
