--- a/BUILD.gn
+++ b/BUILD.gn
@@ -3,6 +3,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # You can obtain one at https://mozilla.org/MPL/2.0/.
 
+import(
+    "//brave/browser/brave_vpn/win/brave_vpn_wireguard_service/allowlist.gni")
 import("//brave/build/config.gni")
 import("//brave/components/brave_vpn/common/buildflags/buildflags.gni")
 import("//build/config/locales.gni")
@@ -678,7 +680,7 @@ if (is_win && enable_resource_allowlist_generation) {
       "--repack_allowlist",
       rebase_path(source_allowlist, root_build_dir),
       "--brave_allowlist",
-      rebase_path(wireguard_resource_allowlist, root_build_dir),
+      rebase_path(wireguard_resource_allowlist_file, root_build_dir),
       "--output",
       rebase_path(brave_allowlist_file, root_build_dir),
     ]
