--- a/browser/brave_vpn/win/brave_vpn_wireguard_service/status_tray/BUILD.gn
+++ b/browser/brave_vpn/win/brave_vpn_wireguard_service/status_tray/BUILD.gn
@@ -3,6 +3,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # You can obtain one at https://mozilla.org/MPL/2.0/.
 
+import("//build/toolchain/gcc_toolchain.gni")
+
 source_set("status_tray") {
   sources = [
     "brave_vpn_tray_command_ids.h",
@@ -22,7 +24,9 @@ source_set("status_tray") {
     "//ui/native_theme",
     "//ui/native_theme:native_theme_browser",
   ]
-
+  if (!enable_resource_allowlist_generation) {
+    deps += [ "//chrome:packed_resources" ]
+  }
   libs = [ "shell32.lib" ]
 }
 
