--- a/resources/allowlist.gni
+++ b/resources/allowlist.gni
@@ -3,7 +3,6 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # You can obtain one at https://mozilla.org/MPL/2.0/.
 
-# Brave VPN Wireguard service allowlist file contains resource ids from
-# brave_vpn_wireguard_service.exe.
-wireguard_resource_allowlist_file =
-    "$root_gen_dir/wireguard_resources_allowlist.txt"
+# Allowlist file used by brave resources, created after merging chrome allowlist
+# and brave resources.
+brave_allowlist_file = "${root_gen_dir}/brave_resources_allowlist.txt"
