Add playlist streaming mojom implementation

--- a/components/playlist/browser/BUILD.gn
+++ b/components/playlist/browser/BUILD.gn
@@ -31,6 +31,8 @@ static_library("browser") {
     "playlist_render_frame_browser_client.h",
     "playlist_service.cc",
     "playlist_service.h",
+    "playlist_streaming.cc",
+    "playlist_streaming.h",
     "playlist_thumbnail_downloader.cc",
     "playlist_thumbnail_downloader.h",
     "pref_names.h",
