--- a/browser/resources/settings/sources.gni
+++ b/browser/resources/settings/sources.gni
@@ -66,6 +66,7 @@ brave_settings_non_web_component_files = [
   "brave_add_site_dialog/brave_add_site_dialog.ts",
   "brave_default_extensions_page/brave_default_extensions_browser_proxy.ts",
   "brave_ipfs_page/brave_ipfs_browser_proxy.ts",
+  "brave_system_page/brave_vpn_browser_proxy.ts",
   "brave_new_tab_page/brave_new_tab_browser_proxy.ts",
   "brave_leo_assistant_page/brave_leo_assistant_browser_proxy.ts",
   "brave_overrides/about_page.ts",
