--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -366,6 +366,8 @@ source_set("ui") {
           "views/brave_vpn/brave_vpn_fallback_dialog_view.h",
           "webui/settings/brave_settings_secure_dns_handler.cc",
           "webui/settings/brave_settings_secure_dns_handler.h",
+          "webui/settings/brave_vpn/brave_vpn_handler.cc",
+          "webui/settings/brave_vpn/brave_vpn_handler.h",
         ]
       }
     }
