--- a/components/omnibox/browser/sources.gni
+++ b/components/omnibox/browser/sources.gni
@@ -3,6 +3,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # You can obtain one at http://mozilla.org/MPL/2.0/.
 
+import("//brave/components/commander/common/buildflags/buildflags.gni")
+
 brave_components_omnibox_browser_sources = [
   "//brave/components/omnibox/browser/brave_bookmark_provider.cc",
   "//brave/components/omnibox/browser/brave_bookmark_provider.h",
@@ -32,12 +34,13 @@ brave_components_omnibox_browser_sources = [
 brave_components_omnibox_browser_deps = [
   "//base",
   "//brave/components/brave_search_conversion",
+  "//brave/components/commander/common/buildflags",
   "//brave/components/constants",
   "//components/prefs",
   "//url",
 ]
 
-if (!is_android && !is_ios) {
+if (enable_commander) {
   brave_components_omnibox_browser_sources += [
     "//brave/components/omnibox/browser/commander_action.cc",
     "//brave/components/omnibox/browser/commander_action.h",
