Add brave strings to chrome repack_allowlist (#19485)

--- a/browser/brave_vpn/win/brave_vpn_wireguard_service/status_tray/BUILD.gn
+++ b/browser/brave_vpn/win/brave_vpn_wireguard_service/status_tray/BUILD.gn
@@ -3,10 +3,11 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # You can obtain one at https://mozilla.org/MPL/2.0/.
 
+import("//build/toolchain/gcc_toolchain.gni")
+
 source_set("status_tray") {
   sources = [
     "brave_vpn_tray_command_ids.h",
-    "brave_vpn_tray_strings_en.h",
     "status_tray_runner.cc",
     "status_tray_runner.h",
   ]
@@ -19,12 +20,13 @@ source_set("status_tray") {
     "//brave/components/brave_vpn/common/win",
     "//brave/components/brave_vpn/common/wireguard/win",
     "//brave/components/resources:strings_grit",
-    "//chrome:packed_resources",
     "//ui/base",
     "//ui/native_theme",
     "//ui/native_theme:native_theme_browser",
   ]
-
+  if (!enable_resource_allowlist_generation) {
+    deps += [ "//chrome:packed_resources" ]
+  }
   libs = [ "shell32.lib" ]
 }
 
