--- a/BUILD.gn
+++ b/BUILD.gn
@@ -3,6 +3,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # You can obtain one at https://mozilla.org/MPL/2.0/.
 
+import(
+    "//brave/browser/brave_vpn/win/brave_vpn_wireguard_service/allowlist.gni")
 import("//brave/build/config.gni")
 import("//brave/components/brave_vpn/common/buildflags/buildflags.gni")
 import("//build/config/locales.gni")
@@ -661,5 +663,28 @@ action("audit_deps") {
 if (is_redirect_cc_build) {
   group("redirect_cc") {
     deps = [ "//brave/tools/redirect_cc" ]
+  }
+}
+if (is_win && enable_resource_allowlist_generation) {
+  # Merge chrome_resource_allowlist and wireguard resources allowlist to keep
+  # wireguard resources in pak files.
+  action("merge_allowlists") {
+    deps = [
+      "//brave/browser/brave_vpn/win/brave_vpn_wireguard_service:wireguard_resource_allowlist",
+      "//chrome:resource_allowlist",
+    ]
+
+    script = "//brave//resources/brave_allowlist.py"
+    source_allowlist = "$root_gen_dir/chrome/chrome_resource_allowlist.txt"
+    args = [
+      "--repack_allowlist",
+      rebase_path(source_allowlist, root_build_dir),
+      "--brave_allowlist",
+      rebase_path(wireguard_resource_allowlist_file, root_build_dir),
+      "--output",
+      rebase_path(brave_allowlist_file, root_build_dir),
+    ]
+
+    outputs = [ brave_allowlist_file ]
   }
 }
