--- a/browser/brave_vpn/win/brave_vpn_wireguard_service/BUILD.gn
+++ b/browser/brave_vpn/win/brave_vpn_wireguard_service/BUILD.gn
@@ -3,9 +3,13 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # You can obtain one at https://mozilla.org/MPL/2.0/.
 
+import(
+    "//brave/browser/brave_vpn/win/brave_vpn_wireguard_service/allowlist.gni")
 import("//brave/build/config.gni")
+import("//build/toolchain/gcc_toolchain.gni")
 import("//build/util/process_version.gni")
 import("//chrome/process_version_rc_template.gni")
+import("//tools/resources/generate_resource_allowlist.gni")
 
 assert(is_win)
 
@@ -17,7 +21,21 @@ copy("brave_vpn_wireguard_binaries") {
   outputs = [ "$root_out_dir/{{source_file_part}}" ]
 }
 
+group("wireguard_service") {
+  deps = [ ":brave_vpn_wireguard_service" ]
+  if (enable_resource_allowlist_generation) {
+    deps += [ ":wireguard_resource_allowlist" ]
+  }
+}
+
+generate_resource_allowlist("wireguard_resource_allowlist") {
+  deps = [ ":brave_vpn_wireguard_service" ]
+  inputs = [ "$root_out_dir/brave_vpn_wireguard_service.exe.pdb" ]
+  output = wireguard_resource_allowlist_file
+}
+
 executable("brave_vpn_wireguard_service") {
+  visibility = [ ":*" ]
   sources = [
     "brave_vpn_wireguard_service.rc",
     "brave_wireguard_service_crash_reporter_client.cc",
