--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /components/brave_new_tab_ui/data/LICENSE
 /components/brave_webtorrent/extension/out/
 /components/brave_rewards/resources/extension/brave_rewards/out/
+/components/third_party/adblock/LICENSE
 /components/third_party/local_data/LICENSE
 /dist/
 /out/
