--- a/browser/sources.gni
+++ b/browser/sources.gni
@@ -46,6 +46,7 @@ import("//brave/components/ai_chat/common/buildflags/buildflags.gni")
 import("//brave/components/brave_vpn/common/buildflags/buildflags.gni")
 import("//brave/components/brave_wayback_machine/buildflags/buildflags.gni")
 import("//brave/components/brave_webtorrent/browser/buildflags/buildflags.gni")
+import("//brave/components/commander/common/buildflags/buildflags.gni")
 import("//brave/components/tor/buildflags/buildflags.gni")
 import("//extensions/buildflags/buildflags.gni")
 
@@ -164,6 +165,7 @@ brave_chrome_browser_deps = [
   "//brave/components/brave_wallet/common:pref_names",
   "//brave/components/brave_wayback_machine/buildflags",
   "//brave/components/brave_webtorrent/browser/buildflags",
+  "//brave/components/commander/common/buildflags",
   "//brave/components/constants",
   "//brave/components/cosmetic_filters/browser",
   "//brave/components/cosmetic_filters/common:mojom",
@@ -239,7 +241,7 @@ brave_chrome_browser_deps = [
   "//url",
 ]
 
-if (!is_android && !is_ios) {
+if (enable_commander) {
   brave_chrome_browser_deps += [
     "//brave/components/commander/browser",
     "//brave/components/commands/browser",
