feat(wallet): DApp Connection Settings V2

--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -155,6 +155,8 @@ leo_icons = [
   "brave-icon-release-color.svg",
   "browser-extensions.svg",
   "carat-down.svg",
+  "carat-left.svg",
+  "carat-right.svg",
   "check-circle-filled.svg",
   "check-circle-outline.svg",
   "check-normal.svg",
@@ -265,6 +267,7 @@ leo_icons = [
   "sidepanel-open.svg",
   "smartphone-desktop.svg",
   "smartphone-hand.svg",
+  "social-dribbble.svg",
   "solana-on.svg",
   "sort-asc.svg",
   "sort-desc.svg",
