kVisualSearchSuggestions flag moved to a different build target.
Chromium change:

https://chromium.googlesource.com/chromium/src/+/a3668b9a7ef9f0

commit a3668b9a7ef9f04c1f33286857689e54720549bb
Author: Pierre St Juste <pstjuste@google.com>
Date:   Fri Aug 4 19:12:35 2023 +0000

    [M116] Adding UKM logging for VQS in CSC.

    More context in the metrics doc http://shortn/_BlMxQQIsnL.

    (cherry picked from commit a3a495425fb51ccd9f1a93aff202ab4a4ef61e93)

    Bug: 1449021, b/285625378

--- a/app/BUILD.gn
+++ b/app/BUILD.gn
@@ -94,7 +94,7 @@ source_set("browser_tests") {
       "//chrome/app:command_ids",
       "//chrome/browser",
       "//chrome/browser/companion/core",
-      "//chrome/browser/companion/visual_search/",
+      "//chrome/browser/companion/visual_search:flags",
       "//chrome/browser/enterprise/connectors/analysis:features",
       "//chrome/browser/promos:utils",
       "//chrome/browser/ui",
