--- a/components/brave_vpn/browser/connection/BUILD.gn
+++ b/components/brave_vpn/browser/connection/BUILD.gn
@@ -64,6 +64,9 @@ group("unit_tests") {
   testonly = true
   deps = []
   if (!is_android) {
-    deps += [ "ikev2:unit_tests" ]
+    deps += [
+      "ikev2:unit_tests",
+      "wireguard:unit_tests",
+    ]
   }
 }
