Add Brave VPN WireGuard setting to brave://settings/system (#19531)
* Added Brave VPN section to brave://settings/system

* Update fallback logic for Wireguard

* Disable setting if Brave VPN connected

* Register Wireguard service

* Fix strings

* Move to BraveSettingsUI

* Use kBraveVpnWireguardServiceInstallSwitchName

* Replace Wireguard -> WireGuard

* Update initial value

* Migrate kBraveVPNWireguardEnabled feature flag

* Close tray icon if wireguard is not active

* Update browser/ui/webui/settings/brave_vpn/brave_vpn_handler.h

Co-authored-by: Sangwoo Ko <sko@brave.com>

* Update browser/ui/webui/settings/brave_vpn/brave_vpn_handler.h

Co-authored-by: Sangwoo Ko <sko@brave.com>

* Fix review comments

---------

Co-authored-by: Sangwoo Ko <sko@brave.com>

--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -366,6 +366,8 @@ source_set("ui") {
           "views/brave_vpn/brave_vpn_fallback_dialog_view.h",
           "webui/settings/brave_settings_secure_dns_handler.cc",
           "webui/settings/brave_settings_secure_dns_handler.h",
+          "webui/settings/brave_vpn/brave_vpn_handler.cc",
+          "webui/settings/brave_vpn/brave_vpn_handler.h",
         ]
       }
     }
@@ -574,6 +576,7 @@ source_set("ui") {
     ]
     if (is_win) {
       deps += [
+        "//brave/components/brave_vpn/common/win",
         "//brave/components/brave_vpn/common/wireguard",
         "//brave/components/brave_vpn/common/wireguard/win",
       ]
