--- a/browser/resources/settings/sources.gni
+++ b/browser/resources/settings/sources.gni
@@ -42,6 +42,7 @@ brave_settings_web_component_files = [
   "brave_sync_page/brave_sync_setup.ts",
   "brave_sync_page/brave_sync_subpage.ts",
   "brave_system_page/brave_performance_page.ts",
+  "brave_system_page/brave_vpn_page.ts",
   "brave_tor_page/brave_tor_bridges_dialog.ts",
   "brave_tor_page/brave_tor_snowflake_install_failed_dialog.ts",
   "brave_tor_page/brave_tor_subpage.ts",
@@ -65,6 +66,7 @@ brave_settings_non_web_component_files = [
   "brave_add_site_dialog/brave_add_site_dialog.ts",
   "brave_default_extensions_page/brave_default_extensions_browser_proxy.ts",
   "brave_ipfs_page/brave_ipfs_browser_proxy.ts",
+  "brave_system_page/brave_vpn_browser_proxy.ts",
   "brave_new_tab_page/brave_new_tab_browser_proxy.ts",
   "brave_leo_assistant_page/brave_leo_assistant_browser_proxy.ts",
   "brave_overrides/about_page.ts",
