--- a/android/java/AndroidManifest.xml
+++ b/android/java/AndroidManifest.xml
@@ -150,6 +150,13 @@
     android:screenOrientation="sensorPortrait"
     tools:ignore="LockedOrientationActivity"/>
 
+<activity
+    android:name="org.chromium.chrome.browser.playlist.kotlin.TestVideoActivity"
+    android:theme="@style/Theme.Chromium.Activity.Fullscreen"
+    android:configChanges="orientation|keyboardHidden|screenSize"
+    android:screenOrientation="sensorPortrait"
+    tools:ignore="LockedOrientationActivity"/>
+
 <activity android:name="org.chromium.chrome.browser.settings.BraveSettingsActivity"
     android:theme="@style/Theme.Chromium.Settings"
     android:configChanges="orientation|keyboardHidden|keyboard|screenSize|mcc|mnc|screenLayout|smallestScreenSize"
