Add new icons to bottom navigation view component

--- a/android/brave_java_resources.gni
+++ b/android/brave_java_resources.gni
@@ -428,6 +428,8 @@ brave_java_resources = [
   "java/res/drawable/exchange_shape.xml",
   "java/res/drawable/ic_ac_onboarding.xml",
   "java/res/drawable/ic_accessibility.xml",
+  "java/res/drawable/ic_accounts.xml",
+  "java/res/drawable/ic_activity.xml",
   "java/res/drawable/ic_add.xml",
   "java/res/drawable/ic_addresses.xml",
   "java/res/drawable/ic_always_on_info.xml",
@@ -523,6 +525,7 @@ brave_java_resources = [
   "java/res/drawable/ic_eth.xml",
   "java/res/drawable/ic_eth_24.xml",
   "java/res/drawable/ic_expand_arrows.xml",
+  "java/res/drawable/ic_explore.xml",
   "java/res/drawable/ic_fil_asset_icon.xml",
   "java/res/drawable/ic_fingerprint.xml",
   "java/res/drawable/ic_following.xml",
@@ -578,6 +581,7 @@ brave_java_resources = [
   "java/res/drawable/ic_plus.xml",
   "java/res/drawable/ic_plus_add_widget.xml",
   "java/res/drawable/ic_popular_sources.xml",
+  "java/res/drawable/ic_portfolio.xml",
   "java/res/drawable/ic_privacy_reports.xml",
   "java/res/drawable/ic_promoted.xml",
   "java/res/drawable/ic_qr_code.xml",
