--- a/browser/resources/settings/sources.gni
+++ b/browser/resources/settings/sources.gni
@@ -4,6 +4,7 @@
 # you can obtain one at http://mozilla.org/MPL/2.0/.
 
 import("//brave/browser/shell_integrations/buildflags/buildflags.gni")
+import("//brave/components/brave_vpn/common/buildflags/buildflags.gni")
 
 # Provide our file list to chromium's settings page build
 # Since our components start in a different path, we'll do the first step (move them to
@@ -42,7 +43,6 @@ brave_settings_web_component_files = [
   "brave_sync_page/brave_sync_setup.ts",
   "brave_sync_page/brave_sync_subpage.ts",
   "brave_system_page/brave_performance_page.ts",
-  "brave_system_page/brave_vpn_page.ts",
   "brave_tor_page/brave_tor_bridges_dialog.ts",
   "brave_tor_page/brave_tor_snowflake_install_failed_dialog.ts",
   "brave_tor_page/brave_tor_subpage.ts",
@@ -66,7 +66,6 @@ brave_settings_non_web_component_files = [
   "brave_add_site_dialog/brave_add_site_dialog.ts",
   "brave_default_extensions_page/brave_default_extensions_browser_proxy.ts",
   "brave_ipfs_page/brave_ipfs_browser_proxy.ts",
-  "brave_system_page/brave_vpn_browser_proxy.ts",
   "brave_new_tab_page/brave_new_tab_browser_proxy.ts",
   "brave_leo_assistant_page/brave_leo_assistant_browser_proxy.ts",
   "brave_overrides/about_page.ts",
@@ -119,6 +118,13 @@ brave_settings_non_web_component_files = [
   "default_brave_shields_page/default_brave_shields_browser_proxy.ts",
   "shortcuts_page/shortcuts_page.ts",
 ]
+
+if (enable_brave_vpn && is_win) {
+  brave_settings_web_component_files +=
+      [ "brave_system_page/brave_vpn_page.ts" ]
+  brave_settings_non_web_component_files +=
+      [ "brave_system_page/brave_vpn_browser_proxy.ts" ]
+}
 
 if (enable_pin_shortcut) {
   brave_settings_web_component_files +=
