--- a/components/brave_news/browser/BUILD.gn
+++ b/components/brave_news/browser/BUILD.gn
@@ -38,6 +38,8 @@ static_library("browser") {
     "publishers_controller.h",
     "publishers_parsing.cc",
     "publishers_parsing.h",
+    "signal_calculator.cc",
+    "signal_calculator.h",
     "suggestions_controller.cc",
     "suggestions_controller.h",
     "unsupported_publisher_migrator.cc",
